[gd_scene load_steps=6 format=3 uid="uid://dyk7bb2gbc4ec"]

[ext_resource type="Theme" uid="uid://obicqd30stvj" path="res://UI.tres" id="1_i7edg"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="2_aj4uw"]
[ext_resource type="Texture2D" uid="uid://40201clfx8jr" path="res://icon/TAB_256.png" id="3_864ao"]
[ext_resource type="PackedScene" uid="uid://c4fqlwtcmomhm" path="res://scenes/settings/settings_window.tscn" id="3_bfflm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s7xy0"]
bg_color = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i7edg")
script = ExtResource("2_aj4uw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_864ao")
stretch_mode = 5

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_right = 208.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Launch" type="Button" parent="Options"]
layout_mode = 2
focus_mode = 0
text = "Launch"

[node name="Edit" type="Button" parent="Options"]
layout_mode = 2
focus_mode = 0
text = "Edit"

[node name="Settings" type="Button" parent="Options"]
layout_mode = 2
focus_mode = 0
text = "Settings"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a File or Directory"
initial_position = 1
size = Vector2i(1664, 274)
ok_button_text = "Open"
file_mode = 3
access = 2
show_hidden_files = false
use_native_dialog = true

[node name="SettingsWindow" parent="." instance=ExtResource("3_bfflm")]
visible = false
layout_mode = 1

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -192.0
offset_right = 239.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s7xy0")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Installed Adventures"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Adventures" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Files" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "File Browser"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Options/Launch" to="Panel" method="show"]
[connection signal="pressed" from="Options/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Options/Settings" to="SettingsWindow" method="_open"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="item_activated" from="Panel/VBoxContainer/Adventures" to="." method="_on_adventures_item_activated"]
[connection signal="pressed" from="Panel/VBoxContainer/Files" to="FileDialog" method="show"]
[connection signal="pressed" from="Panel/VBoxContainer/Files" to="Panel" method="hide"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="Panel" method="hide"]
